apps/home/base/homebridge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      containers:
        - name: homebridge
          # imagePullPolicy: Always # TODO: We're using latest, so we need this. Uncomment when stable
          image: homebridge/homebridge:latest
          ports:
            - name: ui
              containerPort: 8581
          volumeMounts:
            - name: homebridge-data
              mountPath: /homebridge
          securityContext:
            privileged: true
          resources: {}
      volumes:
        - name: homebridge-data
          persistentVolumeClaim:
            claimName: homebridge
      hostNetwork: true
