apps/home/base/homebridge/stateful-set.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homebridge
spec:
  serviceName: homebridge
  replicas: 1
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      containers:
        - name: homebridge
          image: homebridge/homebridge:latest
          ports:
            - name: ui
              containerPort: 8581
          volumeMounts:
            - name: homebridge-data
              mountPath: /homebridge
          securityContext:
            privileged: true
          resources: {}
      hostNetwork: true
  volumeClaimTemplates:
    - metadata:
        name: homebridge-data
      spec:
        storageClassName: local-storage
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        selector:
          matchLabels:
            app: homebridge
