apps/home/base/homebridge/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homebridge
spec:
  selector:
    app: homebridge
  ports:
    - port: 80
      targetPort: ui
