apps/home/base/homebridge/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: homebridge
  labels:
    gateway: http
spec:
  gateways:
    allow: All
  # hostnames:
  #   - dudo.dev
  rules:
    - matches:
        - path:
            type: Prefix
            value: /
      forwardTo:
        - serviceName: homebridge
          port: 8080
